golang-github-prometheus-client-golang (0.8.0-2) UNRELEASED; urgency=medium

  * Disable flaky test. Closes: 854687.
  * debian/control: Update Standards-Version (no changes).
  * debian/control: Mark package as autopkgtest-able.
  * debian/copyright: Format uses http protocol instead of https.
  * A few formatting fixes from cme.

 -- Martín Ferrari <tincho@debian.org>  Mon, 28 Aug 2017 16:43:55 +0000

golang-github-prometheus-client-golang (0.8.0-1) unstable; urgency=medium

  [ Paul Tagliamonte ]
  * Use a secure transport for the Vcs-Git and Vcs-Browser URL

  [ Martín Ferrari ]
  * New upstream release, which does not require repackaging any more.
  * Rename source and binary packages, to match policy.
  * debian/control: Update dependencies, Vcs links, add transitional package.
  * Update and simplify packaging.
  * debian/copyright: remove now obsolete entries.
  * Remove now unneeded patches.

 -- Martín Ferrari <tincho@debian.org>  Thu, 18 Aug 2016 12:06:03 +0000

golang-prometheus-client (0.7.0+ds-4) unstable; urgency=medium

  * Switch to use the golang-github-prometheus-client-model-dev package.
  * Update Standards-Version with no changes.
  * Add XS-Go-Import-Path field.
  * Add lintian overrides for compressed test files.

 -- Martín Ferrari <tincho@debian.org>  Fri, 06 May 2016 18:15:35 +0000

golang-prometheus-client (0.7.0+ds-3) unstable; urgency=medium

  * Add -common as new dependency, remove the private copy of the model
    protobuf.
  * Skip another flaky test.

 -- Martín Ferrari <tincho@debian.org>  Mon, 11 Jan 2016 19:13:47 +0000

golang-prometheus-client (0.7.0+ds-2) unstable; urgency=medium

  * Disable flaky TestSummaryDecay test. Closes: #796421.

 -- Martín Ferrari <tincho@debian.org>  Sat, 22 Aug 2015 09:41:21 +0000

golang-prometheus-client (0.7.0+ds-1) unstable; urgency=medium

  * debian/control: Migration to pkg-go team.
  * Add missing test data.
  * New upstream version.
