@@ -5,6 +5,7 @@ golang-github-prometheus-client-golang (0.8.0-2) UNRELEASED; urgency=medium
   * debian/control: Mark package as autopkgtest-able.
   * debian/copyright: Format uses http protocol instead of https.
   * A few formatting fixes from cme.
+  * debian/rules: Remove unneeded stuff.
 
  -- Martín Ferrari <tincho@debian.org>  Mon, 28 Aug 2017 16:43:55 +0000
 
